--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-router-dom": "^6.22.2",
     "styled-components": "^6.1.8"
   },
