--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.6.7",
-    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
+    "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.2",
-    "styled-components": "^6.1.8"
+    "styled-icons": "^10.47.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
