--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-hook-form": "^7.51.0",
+    "react-localstorage-hook": "^0.1.1",
     "react-router-dom": "^6.22.2",
     "styled-icons": "^10.47.0",
     "zod": "^3.22.4"
