--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.6.7",
+    "cpf-cnpj-validator": "^1.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
